--- a/src/assets/_footer.scss
+++ b/src/assets/_footer.scss
@@ -134,7 +134,7 @@ $linkinatorColorYellow: #ffca08;
 .tabs-item {
 	flex: 0 1 25%;
 	height: 40px;
-	padding: 13px 19px;
+	padding: 13px 20px;
 	color: #000000;
 	font-size: 17px;
 	line-height: 20px;
@@ -199,7 +199,7 @@ $linkinatorColorYellow: #ffca08;
 }
 .tabs-block-wrapper{
 	display: flex;
-	padding: 10px 15px;
+	margin: 10px 15px;
 }
 .tabs-block-link {
 	flex: 0 1 33.333%;
