--- a/src/css/main.css
+++ b/src/css/main.css
@@ -731,7 +731,7 @@ b {
       -ms-flex: 0 1 25%;
           flex: 0 1 25%;
   height: 40px;
-  padding: 13px 19px;
+  padding: 13px 20px;
   color: #000000;
   font-size: 17px;
   line-height: 20px;
@@ -809,7 +809,7 @@ b {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 10px 15px;
+  margin: 10px 15px;
 }
 
 .tabs-block-link {
