--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -32,6 +32,40 @@ body {
 
 //==========hero-block=======
 
+.online-chat{
+	position: absolute;
+	top: 11.6%;
+   right: 7.3%;
+	z-index: 20;
+	width: 81px;
+	height: 99px;
+	background-color: #006ea7;
+	&:hover{
+		background-color: $linkinatorColorYellow;
+		transition: transform 0.9s ease 0s;
+	}
+	opacity: 0.9;
+	display: flex;
+	padding: 5px;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	._icon-chat{
+		color: #ffffff;
+		font-size: 25px;
+		margin-bottom: 15px;
+	}
+	.online-chat-text{
+		color: #ffffff;
+		font-size: 14px;
+		font-weight: 400;
+		font-style: normal;
+		letter-spacing: normal;
+		line-height: 17px;
+		text-align: center;
+	}
+}
+
 .hero-block {
 	background: url("../img/hero-block.jpg") no-repeat 0 0;
 	width: 100%;
