--- a/src/css/main.css
+++ b/src/css/main.css
@@ -137,7 +137,7 @@ h6 {
   cursor: pointer;
 }
 
-._icon-chat {
+.consult-chat ._icon-chat {
   font-size: 20px;
   color: #ffca08;
   padding-right: 7px;
@@ -297,6 +297,55 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+}
+
+.online-chat {
+  position: absolute;
+  top: 11.6%;
+  right: 7.3%;
+  z-index: 20;
+  width: 81px;
+  height: 99px;
+  background-color: #006ea7;
+  opacity: 0.9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 5px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.online-chat:hover {
+  background-color: #ffca08;
+  -webkit-transition: -webkit-transform 0.9s ease 0s;
+  transition: -webkit-transform 0.9s ease 0s;
+  transition: transform 0.9s ease 0s;
+  transition: transform 0.9s ease 0s, -webkit-transform 0.9s ease 0s;
+}
+
+.online-chat ._icon-chat {
+  color: #ffffff;
+  font-size: 25px;
+  margin-bottom: 15px;
+}
+
+.online-chat .online-chat-text {
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: 17px;
+  text-align: center;
 }
 
 .hero-block {
@@ -821,7 +870,7 @@ b {
 .tabs-block-link a {
   display: inline-block;
   font-size: 15px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 173%;
   text-decoration: underline;
   color: #267bae;
