--- a/src/assets/_footer.scss
+++ b/src/assets/_footer.scss
@@ -126,8 +126,7 @@ $linkinatorColorYellow: #ffca08;
 .footer-nav{
 	max-width: 517px;
 }
-.tabs {
-}
+
 .tabs-items {
 	display: flex;
 }
@@ -141,66 +140,30 @@ $linkinatorColorYellow: #ffca08;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	span{
-		position: relative;
-		z-index: 2;
+
+	&.is-active{
+		border: 1px solid #d8d8d8;
+		border-bottom: none;
+		background-color: #ffffff;
+		border-radius: 4px 4px 0 0;
+		z-index: 1;
 	}
 }
-.tabs-body {
+.tabs-body{
+	margin-top: -1px;
 }
 .tabs-block {
 	position: relative;
 	display: none;
-	&::before{
-		content: "";
-		height: 40px;
-		width: 25%;
-		position: absolute;
-		top: -40px;
-	}
-	&:nth-child(1)::before	{
-		left: 0;
-		border: 1px solid #d8d8d8;
-		background-color: #ffffff;
-		opacity: 0.65;
-	}
-	&:nth-child(2)::before	{
-		left: 25%;
-		border: 1px solid #d8d8d8;
-		background-color: #ffffff;
-		opacity: 0.65;
-	}
-	&:nth-child(3)::before	{
-		left: 50%;
-		border: 1px solid #d8d8d8;
-		background-color: #ffffff;
-		opacity: 0.65;
-	}
-	&:nth-child(4)::before	{
-		right: 0%;
-		border: 1px solid #d8d8d8;
-		background-color: #ffffff;
-		opacity: 0.65;
-	}
-	&:nth-child(1),
-	&:nth-child(2),
-	&:nth-child(3),
-	&:nth-child(4)	{
-		border: 1px solid #d8d8d8;
-		background-color: #ffffff;
-		opacity: 0.65;
-	}
+
 	&:target{
-		display: block;
+		display: flex;
 		border: 1px solid #d8d8d8;
 		background-color: #ffffff;
-		opacity: 0.65;
+		border-radius: 0 4px 4px 4px;
 	}
 }
-.tabs-block-wrapper{
-	display: flex;
-	margin: 10px 15px;
-}
+
 .tabs-block-link {
 	flex: 0 1 33.333%;
 	a{
@@ -211,6 +174,7 @@ $linkinatorColorYellow: #ffca08;
 		text-decoration: underline;
 		color: $linkinatorColorBlue;
 		padding: 10px 15px;
+
 		&:hover{
 			color: $linkinatorColorYellow;
 			transition: transform 0.3s ease 0s;
