--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -3,9 +3,9 @@ $fontFamily: "Open Sans";
 $fontSize: 15px;
 $fontSizeTitle: 20px;
 $mainColor: #000000;
-$linkinatorColorBlue: #267bae;
-$linkinatorColorOrange: #ff9626;
-$linkinatorColorYellow: #ffca08;
+$ColorBlue: #267bae;
+$ColorOrange: #ff9626;
+$ColorYellow: #ffca08;
 
 //===========================
 
@@ -34,26 +34,29 @@ body {
 
 .online-chat{
 	position: absolute;
-	top: 11.6%;
-   right: 7.3%;
+	top: 16%;
+   right: 0;
 	z-index: 20;
 	width: 81px;
 	height: 99px;
 	background-color: #006ea7;
+
 	&:hover{
-		background-color: $linkinatorColorYellow;
+		background-color: $ColorYellow;
 		transition: transform 0.9s ease 0s;
 	}
+
 	opacity: 0.9;
 	display: flex;
 	padding: 5px;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
 	._icon-chat{
 		color: #ffffff;
 		font-size: 25px;
-		margin-bottom: 15px;
+		margin-bottom: 10px;
 	}
 	.online-chat-text{
 		color: #ffffff;
@@ -89,7 +92,7 @@ body {
 			border-bottom: 0.5px solid #585858;
 			}
 			&:hover{
-				color: $linkinatorColorYellow;
+				color: $ColorYellow;
 				transition: transform 0.3s ease 0s;
 			}
 			a{
@@ -107,7 +110,7 @@ body {
 			}
 		}
 	}
-	p{
+	.hero-block-text{
 		margin-top: 60px;
 		flex: 0 0 42%;
 		color: #000000;
@@ -119,7 +122,7 @@ body {
 	.text-background{
 		display: inline-block;
 		padding: 0px 10px;	
-		background-color: $linkinatorColorYellow;
+		background-color: $ColorYellow;
 		&:not(:last-of-type){
 			margin-bottom: 5px;
 		}
@@ -150,7 +153,7 @@ b{
 			text-decoration: underline;
 		}
 		&-body {
-			color: $linkinatorColorBlue;
+			color: $ColorBlue;
 			> li{
 				padding: 17px 24px 0px 17px;
 				&:last-child a{
@@ -170,7 +173,7 @@ b{
 						padding-right: 12px;
 					}
 					&:hover{
-						color: $linkinatorColorOrange;
+						color: $ColorOrange;
 						transition: transform 0.3s ease 0s;
 					}
 				}
@@ -203,7 +206,7 @@ b{
 			}
 		}
 		i{
-			color: $linkinatorColorYellow;
+			color: $ColorYellow;
 			padding-right: 12px;
 		}
 	}
@@ -221,7 +224,7 @@ b{
 			padding: 5px 20px;
 			font-size: 25px;
 			font-weight: 300;
-			background-color: $linkinatorColorYellow;
+			background-color: $ColorYellow;
 			opacity: 0.9;
 		}
 	}
@@ -265,7 +268,7 @@ b{
 // 		text-decoration: underline;
 // 	}
 // 	&-body {
-// 		color: $linkinatorColorBlue;
+// 		color: $ColorBlue;
 // 		> li{
 // 			padding: 17px 24px 0px 17px;
 // 			&:last-child a{
@@ -284,7 +287,7 @@ b{
 // 					padding-right: 12px;
 // 				}
 // 				&:hover{
-// 					color: $linkinatorColorOrange; transition: transform 0.3s ease 0s;
+// 					color: $ColorOrange; transition: transform 0.3s ease 0s;
 // 				}
 // 			}
 			
