--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -34,7 +34,7 @@ body {
 
 .online-chat{
 	position: absolute;
-	top: 16%;
+	top: 15%;
    right: 0;
 	z-index: 20;
 	width: 81px;
@@ -88,17 +88,21 @@ body {
 		flex-direction: column;
 		li{
 			padding: 30px 10px 30px 10px;
+
 			&:not(:last-of-type){
 			border-bottom: 0.5px solid #585858;
 			}
+
 			&:hover{
 				color: $ColorYellow;
 				transition: transform 0.3s ease 0s;
 			}
+			
 			a{
 				position: relative;
 				font-size: 20px;
 				margin-left: 60px;
+
 				i{
 					position: absolute;
 					left: -55px;
@@ -123,6 +127,7 @@ body {
 		display: inline-block;
 		padding: 0px 10px;	
 		background-color: $ColorYellow;
+
 		&:not(:last-of-type){
 			margin-bottom: 5px;
 		}
@@ -147,23 +152,28 @@ b{
 	min-height: 335px;
 	box-shadow: 0 0 4px rgba(7, 88, 145, 0.09);
 	border: 1px solid #d7dcdf;
+
 		&-header {
 			background-color: #f9f9f9;
 			padding: 20px 22px;
 			text-decoration: underline;
 		}
+
 		&-body {
 			color: $ColorBlue;
 			> li{
 				padding: 17px 24px 0px 17px;
-				&:last-child a{
+
+				&:last-of-type a{
 					border-bottom: none;
 				}
+
 				&:hover{
 					background-color: aliceblue;
 					transition: transform 0.3s ease 0s;
 				}
-				> a{
+				
+				a{
 					border-bottom: 1px solid #d7dcdf;
 	   			display: block;
 	   			padding-bottom: 10px;
