--- a/src/assets/styles/4-base/_body.scss
+++ b/src/assets/styles/4-base/_body.scss
@@ -2,7 +2,7 @@ body {
 	height: 100%;
 	font-family: $fontFamily;
 	font-size: $fontSizePrimary;
-	color: $colorPrimary;
+	color: $darkColor;
 	font-weight: $fontWeightPrimary;
 	letter-spacing: normal;
 	line-height: 1;
