--- a/src/assets/styles/6-components/_index.scss
+++ b/src/assets/styles/6-components/_index.scss
@@ -1,4 +1,15 @@
-@import "buttons";
-@import "header";
-@import "layot";
-@import "footer";
+@import "buttons/index";
+@import "brand-logo";
+@import "header-chat";
+@import "header-search";
+@import "one-click-order";
+@import "dropdown";
+@import "main-nav";
+@import "hero-block";
+@import "panel-menu";
+@import "linkinator";
+@import "star-list";
+@import "nav-tabs";
+@import "social-media";
+@import "form-input";
+@import "online-chat";
