--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,4 +4,5 @@
 @import "4-base/index";
 @import "5-objects/index";
 @import "6-components/index";
-@import "7-helpers/index";
+@import "7-pages/index";
+@import "8-helpers/index";
